# CortexClientBase

./: CMakeLists.txt  CortexCommon
include/client/: client_base.hpp
sources/: client_base.cpp
